Solve scroll bar overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,10 +3,6 @@
 
 @import "jekyll-theme-minimalist";
 
-html {
-  overflow-y: scroll;
-}
-
 .img-circle {
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
